✅ Netlify form detection fix + success page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <body class="bg-gray-100">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <!-- Netlify form hidden for build bot to detect -->
+<form name="contact" netlify hidden>
+  <input type="text" name="name" />
+  <input type="email" name="email" />
+  <textarea name="message"></textarea>
+</form>
+
 </body>
 
 </html>
